all endpoints done
